[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/AssetsFinals/death_escene_2.png" type="Texture" id=1]
[ext_resource path="res://assets/AssetsFinals/death_escene.png" type="Texture" id=2]
[ext_resource path="res://src/terminal/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scenes/deadScreen.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 508.813 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 512, 285.608 )
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 370.703
margin_top = 405.998
margin_right = 648.703
margin_bottom = 461.998
rect_scale = Vector2( 0.997835, 1 )
mouse_default_cursor_shape = 0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_text = "????"
caret_blink = true
caret_blink_speed = 0.55
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="visibility_changed" from="LineEdit" to="." method="_on_LineEdit_visibility_changed"]
